# gemsuperbuild

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: External_cactus.cmake  External_lmdb.cmake  External_log4cplus.cmake  External_reg_utils_arm.cmake  External_reg_utils_x86_64.cmake  External_wiscrpcsvc.cmake  External_xdaq.cmake  External_xerces-c.cmake  External_xhal_x86_64.cmake  GEMSuperbuildCache.cmake  PreventInSourceBuilds.cmake  SuperbuildCache.cmake  SuperbuildProject.cmake
occi-abicompat/: .clang-format  CMakeLists.txt  link-test.cpp  occi-abicompat.cpp
projects/amc13-sw/: amc13-python3.patch  pc.superbuild.cmake
projects/cmsgemos/: pc.superbuild.cmake
projects/ipbus-sw/: pc.superbuild.cmake
projects/lmdb/: ctp7.superbuild.cmake
projects/log4cplus/: ctp7.superbuild.cmake
projects/occi-abicompat/: pc.superbuild.cmake
projects/protobuf/: pc.superbuild.cmake
projects/pugixml/: pc.superbuild.cmake
projects/reg_utils/: ctp7.superbuild.cmake  pc.superbuild.cmake
projects/wiscrpcsvc-client/: cmake_build.patch  pc.superbuild.cmake
projects/xdaq/: core-00-xalan.patch  core-01-boost_thread.patch  core-02-asyncresolv.patch  core-03-parallel_build.patch  pc.superbuild.cmake  worksuite-00-merge_master.patch  worksuite-01-oracle.patch  worksuite-02-parallel_build.patch  xdaq-core-asyncresolv.patch  xdaq-core-cpp11.patch
projects/xerces-c/: ctp7.superbuild.cmake
projects/xhal/: pc.superbuild.cmake
